[#119828643] - soft-code the app port

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build: .
     command: java -jar target/Spring-Data-Rest-Seed-0.1.0.jar
     ports:
-      - '8080:8080'
+      - '${APP_PORT}:8080'
     volumes:
       - .:/code
       - ./dependencies:/root/.m2
