--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
     </parent>
 
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>1.7</java.version>
+        <snippetsDirectory>${project.build.directory}/generated-snippets</snippetsDirectory>
     </properties>
 
     <dependencies>
@@ -30,11 +31,19 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency> 
- 
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
+        <dependency> 
+            <groupId>org.springframework.restdocs</groupId> 
+            <artifactId>spring-restdocs-mockmvc</artifactId> 
+            <scope>test</scope> 
+        </dependency> 
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-rest-hal-browser</artifactId>
+       </dependency>
     </dependencies>
 
     <build>
@@ -42,6 +51,14 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.2.1</version>
+                <configuration>
+                <mainClass>hello.Application</mainClass>
+              </configuration>
             </plugin>
             <plugin>  
 	              <groupId>org.codehaus.mojo</groupId>  
@@ -61,6 +78,62 @@
 	                  </dependency>  
 	              </dependencies>  
 	          </plugin> 
+              <plugin>
+                   <groupId>org.apache.maven.plugins</groupId>
+                   <artifactId>maven-surefire-plugin</artifactId>
+                   <configuration>
+                       <includes>
+                           <include>**/*Documentation.java</include>
+                       </includes>
+                   </configuration>
+            </plugin>
+            <plugin>
+                   <groupId>org.asciidoctor</groupId>
+                   <artifactId>asciidoctor-maven-plugin</artifactId>
+                   <version>1.5.2</version>
+                   <executions>
+                       <execution>
+                           <id>generate-docs</id>
+                           <phase>prepare-package</phase>
+                           <goals>
+                               <goal>process-asciidoc</goal>
+                           </goals>
+                           <configuration>
+                               <backend>html</backend>
+                               <doctype>book</doctype>
+                               <sourceDocumentName>index.adoc</sourceDocumentName>
+                               <attributes>
+                                   <snippets>${snippetsDirectory}</snippets>
+                               </attributes>
+                           </configuration>
+                       </execution>
+                   </executions>
+            </plugin>
+            <plugin> 
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.7</version>
+                <executions>
+                    <execution>
+                        <id>copy-resources</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>
+                                ${project.build.outputDirectory}/static/docs
+                            </outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>
+                                        ${project.build.directory}/generated-docs
+                                    </directory>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
         
     </build>
